# canvas

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: CanvasEditor.tsx  CanvasGrid.tsx  Sidebar.tsx
src/components/editors/: ExcalidrawEditor.tsx  TldrawEditor.tsx
src/lib/: db.ts  settings.ts  thumbnails.ts  types.ts
