[package]
name = "canvas-manager"
version = "0.1.0"
description = "Canvas Manager — Excalidraw & tldraw"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "canvas_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
